# workouts-sets-and-reps-counter

./: .gitignore  README.md  pyproject.toml  requirements.txt  sets_and_reps_counter.py
tests/: test_sets_and_reps_counter.py  test_workout_audio_coach.py
workout_audio_coach/: __init__.py  __main__.py  cli.py
