[project]
name = "workouts-sets-and-reps-counter"
version = "0.1.0"
description = "Generate guided workout audio files that count sets and reps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtts>=2.5.4",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
