[project]
name = "workout-audio-coach"
version = "0.2.0"
description = "Generate guided workout audio files with previewable sets, reps, and rest cues."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtts>=2.5.4",
    "pydub>=0.25.1",
]

[project.scripts]
workout-audio-coach = "workout_audio_coach.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
